[package]

name = "rusteroid"
version = "0.0.1"
authors = ["Zac Stewart"]

[dependencies.graphics]

git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"
